# xdwlan-login

./: .gitignore  Cargo.toml  README.md  app.rc  build.rs
scripts/: install.sh
src/: config.rs  lib.rs  logger.rs  main.rs  utils.rs
src/tasks/: login.rs  task.rs  tray.rs
