[package]
name = "xdwlan-login"
authors = ["Silver Ling <silver.ling@outlook.com>"]
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
log = "0.4.22"
env_logger = "0.11.3"
headless_chrome = "1.0.15"
reqwest = { version = "0.12.5", features = ["blocking", "native-tls-vendored"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
regex = "1.10.5"

[build-dependencies]
embed-resource = "2.4.2"

[target.'cfg(target_os = "windows")'.dependencies]
image = { version = "0.25.1", default-features = false, features = ["ico"] }
tray-icon = "0.14.3"
winit = "0.30.3"
winreg = "0.52.0"

[target.'cfg(target_os = "linux")'.dependencies]
dirs = "5.0.1"
signal-hook = "0.3.17"
clap = "4.5.19"


[profile.release]
opt-level = "z" # Optimize for size.
